# Haskell-tmdb-fetcher

./: .gitignore  README.md  flake.nix
tmdb-fetcher/: Main.hs  dmdb-fetcher.cabal
